--- a/portfolio/src/main/webapp/budget.html
+++ b/portfolio/src/main/webapp/budget.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width", initial-scale=1.0"/>
-    <title>Team-8-Project</title>
+    <title>Budget</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Home</h1>
+    <h1>Budget Page</h1>
     <header>
       <nav>
         <ul>
