--- a/portfolio/src/main/webapp/budget.html
+++ b/portfolio/src/main/webapp/budget.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Budget Page</h1>
+    <h1>Budget page</h1>
     <header>
       <nav>
         <ul>
