--- a/portfolio/src/main/webapp/schedule.html
+++ b/portfolio/src/main/webapp/schedule.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Scehdule Page</h1>
+    <h1>Schedule Page</h1>
     <header>
       <nav>
         <ul>
@@ -28,7 +28,7 @@
           </li>
           <li class="home">
             <a href="schedule.html">
-              <span>Scehdule</span>
+              <span>Schedule</span>
             </a>
           </li>
         </ul>
