--- a/portfolio/src/main/webapp/info.html
+++ b/portfolio/src/main/webapp/info.html
@@ -28,7 +28,7 @@
           </li>
           <li class="home">
             <a href="schedule.html">
-              <span>Scehdule</span>
+              <span>Schedule</span>
             </a>
           </li>
         </ul>
