Added a layout to the homepage

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,7 +20,44 @@
             </nav></div>
         </h1></header></div>
         <div id = "content">
-            <div id="photo"><img src="photos/hawaii.jpeg"/></div>
+            <nav>
+                <ul>
+                    <li class="home">
+                        <a href="index.html">
+                        <span>Home</span>
+                        </a>
+                    </li>
+                    <li class="info">
+                        <a href="info.html">
+                        <span>Info</span>
+                        </a>
+                    </li>
+                    <li class="home">
+                        <a href="budget.html">
+                        <span>Budget</span>
+                        </a>
+                    </li>
+                    <li class="home">
+                        <a href="schedule.html">
+                        <span>Schedule</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
+        <div id = "about">
+                <a>
+                    Welcome to our website. We aim to assist anyone in organizing their trip before and during
+                    their travel. Any question you have, from budget limitations to schedules to general information,
+                    can be found here. Explore the website!
+                </a><br><br><br>
+                <a>
+                    ABOUT US
+                </a><br><br>
+                <a>
+                    We are three college students participating in Google's Software Product Sprint Summer 2021 Program.
+                    We build for those who seek to try something new, properly. Contact us below!
+                </a><br>
+            </div>
   </body>
 </html>
