--- a/portfolio/src/main/webapp/budget.html
+++ b/portfolio/src/main/webapp/budget.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Budget Page</h1>
     <header>
-      <nav>
+      <div id="menu"><nav>
         <ul>
           <li class="home">
             <a href="index.html">
@@ -32,7 +32,7 @@
             </a>
           </li>
         </ul>
-      </nav>
+      </nav></div>
     </header>
   </body>
 </html>
