Created a mock schedule page and related css file

--- a/portfolio/src/main/webapp/schedule.html
+++ b/portfolio/src/main/webapp/schedule.html
@@ -8,31 +8,17 @@
   </head>
   <body>
     <h1>Schedule Page</h1>
-    <header>
-      <nav>
-        <ul>
-          <li class="home">
-            <a href="index.html">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="info">
-            <a href="info.html">
-              <span>Info</span>
-            </a>
-          </li>
-          <li class="home">
-            <a href="budget.html">
-              <span>Budget</span>
-            </a>
-          </li>
-          <li class="home">
-            <a href="schedule.html">
-              <span>Schedule</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div id = "header"><header>
+            <h1> Home
+            <div id = "links"><nav>
+                <a href="index.html">about</a> 
+                &nbsp;&nbsp; 
+                <a href="budget.html">budget</a> 
+                &nbsp;&nbsp; 
+                <a href="info.html">information</a> 
+                &nbsp;&nbsp; 
+                <a href="schedule.html">schedule</a>
+            </nav></div>
+        </h1></header></div>
   </body>
 </html>
