--- a/portfolio/src/main/webapp/budget.html
+++ b/portfolio/src/main/webapp/budget.html
@@ -34,7 +34,7 @@
           </li>
           <li class="schedule">
             <a href="schedule.html">
-              <span>Scehdule</span>
+              <span>Schedule</span>
             </a>
           </li>
         </ul>
