--- a/portfolio/src/main/webapp/schedule.html
+++ b/portfolio/src/main/webapp/schedule.html
@@ -9,7 +9,6 @@
   <body>
     <h1>Schedule Page</h1>
     <div id = "header"><header>
-            <h1> Home
             <div id = "links"><nav>
                 <a href="index.html">about</a> 
                 &nbsp;&nbsp; 
@@ -19,6 +18,13 @@
                 &nbsp;&nbsp; 
                 <a href="schedule.html">schedule</a>
             </nav></div>
-        </h1></header></div>
+        </header></div>
+    <div id = "content">
+         <iframe src=
+         "https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23009688&amp;title=My%20Schedule&amp;showCalendars=1" 
+         style="border:solid 1px #777" width="800" height="600" 
+         frameborder="0" scrolling="no">
+         </iframe>
+    </div>
   </body>
 </html>
