Changed the home page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,42 +10,16 @@
         <div id = "header"><header>
             <h1> Home
             <div id = "links"><nav>
-                <a href="index.html">about</a> 
-                &nbsp;&nbsp; 
                 <a href="budget.html">budget</a> 
                 &nbsp;&nbsp; 
-                <a href="info.html">information</a> 
+                <a href="info.html">info</a> 
                 &nbsp;&nbsp; 
                 <a href="schedule.html">schedule</a>
             </nav></div>
         </h1></header></div>
         <div id = "content">
-            <nav>
-                <ul>
-                    <li class="home">
-                        <a href="index.html">
-                        <span>Home</span>
-                        </a>
-                    </li>
-                    <li class="info">
-                        <a href="info.html">
-                        <span>Info</span>
-                        </a>
-                    </li>
-                    <li class="home">
-                        <a href="budget.html">
-                        <span>Budget</span>
-                        </a>
-                    </li>
-                    <li class="home">
-                        <a href="schedule.html">
-                        <span>Schedule</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div id = "about">
+            <div id = "about">
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <a>
                     Welcome to our website. We aim to assist anyone in organizing their trip before and during
                     their travel. Any question you have, from budget limitations to schedules to general information,
@@ -56,8 +30,9 @@
                 </a><br><br>
                 <a>
                     We are three college students participating in Google's Software Product Sprint Summer 2021 Program.
-                    We build for those who seek to try something new, properly. Contact us below!
+                    We build for those who seek to try something new, properly.
                 </a><br>
             </div>
+        </div>
   </body>
 </html>
