--- a/portfolio/src/main/webapp/schedule.html
+++ b/portfolio/src/main/webapp/schedule.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Schedule Page</h1>
     <div id = "header"><header>
+            <h1> Schedule
             <div id = "links"><nav>
-                <a href="index.html">about</a> 
+                <a href="index.html">home</a> 
                 &nbsp;&nbsp; 
                 <a href="budget.html">budget</a> 
                 &nbsp;&nbsp; 
-                <a href="info.html">information</a> 
+                <a href="info.html">info</a> 
                 &nbsp;&nbsp; 
                 <a href="schedule.html">schedule</a>
             </nav></div>
-        </header></div>
+        </h1></div>
     <div id = "content">
          <iframe src=
          "https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23009688&amp;title=My%20Schedule&amp;showCalendars=1" 
