--- a/portfolio/src/main/webapp/info.html
+++ b/portfolio/src/main/webapp/info.html
@@ -8,33 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body onload = "firstItemLoaded()" > <!-- DEFAULT: get value of selected thing from menu-->
-    <h1>Where to?</h1>    
-    <header>
-      <nav>
-        <ul>
-          <li class="home">
-            <a href="index.html">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="info">
-            <a href="info.html">
-              <span>Info</span>
-            </a>
-          </li>
-          <li class="home">
-            <a href="budget.html">
-              <span>Budget</span>
-            </a>
-          </li>
-          <li class="home">
-            <a href="schedule.html">
-              <span>Schedule</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div id = "header"><header>
+            <h1> Info
+            <div id = "links"><nav>
+                <a href="index.html">home</a> 
+                &nbsp;&nbsp; 
+                <a href="budget.html">budget</a> 
+                &nbsp;&nbsp; 
+                <a href="info.html">info</a> 
+                &nbsp;&nbsp; 
+                <a href="schedule.html">schedule</a>
+            </nav></div>
+        </h1></div>
     <div> 
         <h2>Select your state of interest</h2> 
 
