change style ref

--- a/portfolio/src/main/webapp/info.html
+++ b/portfolio/src/main/webapp/info.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" , initial-scale=1.0" />
     <title>Info</title>
-     <link rel='stylesheet' href="infoStyle.css" />
+     <link rel='stylesheet' href="style.css" />
 </head>                                                                       
   <body onload = "firstItemLoaded()" > <!-- DEFAULT: get value of selected thing from menu-->
     <div id = "header"><header>
