--- a/portfolio/src/main/webapp/budget.html
+++ b/portfolio/src/main/webapp/budget.html
@@ -131,12 +131,12 @@
               <span class="checkmark"></span>
             </label>
             <label class="container"
-              >New England Aquarium, Colorado - $40
+              >New England Aquarium, Massachusetts - $40
               <input type="checkbox" id="neaq" />
               <span class="checkmark"></span>
             </label>
             <label class="container"
-              >Science Museum, Colorado - $30
+              >Science Museum, Massachusetts - $30
               <input type="checkbox" id="museum" />
               <span class="checkmark"></span>
             </label>
