--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,6 +10,8 @@
         <div id = "header"><header>
             <h1> Home
             <div id = "links"><nav>
+                <a href="index.html">home</a> 
+                &nbsp;&nbsp; 
                 <a href="budget.html">budget</a> 
                 &nbsp;&nbsp; 
                 <a href="info.html">info</a> 
