Final design fixes

--- a/portfolio/src/main/webapp/info.html
+++ b/portfolio/src/main/webapp/info.html
@@ -21,7 +21,9 @@
                 <a href="schedule.html">schedule</a>
             </nav></div>
         </h1></div>
-    <div>
+    <div id = "background">
+    <div id = "content">
+        <br><br>
         <h2>Select your state of interest</h2>
         <label for="states"> </label> <!-- Making the label empty (no label for menu)-->
         <div class="center-menu">
@@ -178,8 +180,8 @@
                 </p>
 
             </div>
-        </div>
-    </div>
+        </div><br><br>
+    </div></div>
 </body> <!-- adding content of page in Body-- all content (paragraphs, headers, etc. go within the body) -->
 
 </html>
