--- a/portfolio/src/main/webapp/schedule.html
+++ b/portfolio/src/main/webapp/schedule.html
@@ -19,6 +19,8 @@
                 <a href="schedule.html">schedule</a>
             </nav></div>
         </h1></div>
+    <div id = "background">
+    <div id = "content">
     <form action="/form-handler" method="POST">
         <p><br><br>Edit Calendar</p>
         <p>Start Date:</p>
@@ -31,13 +33,15 @@
         <textarea name="date-input">...</textarea>
         <br/>
         <input type="submit" />
+    <br><br><br>
       </form>
-    <div id = "content">
          <iframe src=
          "https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23009688&amp;title=My%20Schedule&amp;showCalendars=1" 
          style="border:solid 1px #777" width="800" height="600" 
          frameborder="0" scrolling="no">
          </iframe>
+    </div>
+    <br><br><br>
     </div>
   </body>
 </html>
